@@ -17,6 +17,7 @@ package Paws::API::ServiceToClass;
    'autoscaling-plans' => 'AutoScalingPlans',
    'application-autoscaling' => 'ApplicationAutoScaling',
     appstream => 'AppStream',
+    backup => 'Backup',
     batch => 'Batch',
     budgets => 'Budgets',
     ce => 'CostExplorer',
@@ -52,6 +53,7 @@ package Paws::API::ServiceToClass;
     directconnect => 'DirectConnect',
     dlm => 'DLM',
     dms => 'DMS',
+    docdb => 'DocDB',
     ds => 'DS',
     dynamodb => 'DynamoDB',
     dynamodbstreams => 'DynamoDBStreams',
